ahro si veo la luz al final del tunel

--- a/appendix/GSproofs-g.tex
+++ b/appendix/GSproofs-g.tex
@@ -1,21 +1,19 @@
 % !TEX root = ../main-ring-signature.tex
 
-We consider Groth-Sahai proofs that $\beta x=y$, for $\beta=\beta_i,x=x_i,y=\beta_ix_i$, and $i\in[m]$. These proofs  consists of two vectors
+Given $[\vecb{a}]_2 = \beta[\vecb{u}_1]_1 + r[\vecb{u}_2]_1$, we construct a Groth-Sahai proofs that $\beta x=y$ even without knowledge of $\beta$. Let $s,t,\delta\gets\Z_q$, these proofs  consists of two vectors
 \begin{align}
-[&\vecb{\psi}]_2=r[\vecb{c}]_2-t[\vecb{w}_1]_2-\delta[\vecb{w}_2]_2 &[\vecb{\omega}]_1 =\beta s[\vecb{u}_1]_1+\delta[\vecb{u}_2]_1
+[&\vecb{\psi}]_2=-t[\vecb{w}_1]_2-\delta[\vecb{w}_2]_2 &[\vecb{\omega}]_1 =s[\vecb{a}]_1+\delta[\vecb{u}_2]_1
 \label{eq:wi-proofs}
 \end{align}
 and commitments to $x$ and to $y$
-$$
-[\vecb{c}]_2= x[\vecb{w}_1]_2+s[\vecb{w}_2]_2,\ [\vecb{d}]_1 =y[\vecb{u}_1]_2 + t[\vecb{u}_2]_2,\ s,t\gets\Z_q,
-$$
+\begin{align*}
+&[\vecb{c}]_2= x[\vecb{w}_1]_2+s[\vecb{w}_2]_2, &[\vecb{d}]_1 =x[\vecb{a}_1]_2 + t[\vecb{u}_2]_2,
+\end{align*}
 satisfying the following verification equation
 \begin{equation}
 [\vecb{a}]_1[\vecb{c}^\top]_2-[\vecb{d}]_1[\vecb{w}_1]_2 =[\vecb{u}_2]_1[\vecb{\psi}^\top]_2+[\vecb{\omega}]_1[\vecb{w}^\top_2]_2.
 \label{eq:wi-verif}
 \end{equation}
-(In our ring signature we will set $s=0$ as we are not interested on hiding $[\vecb{x}]_2$.)
-
 These proofs and commitments can be re-randomized as follows
 \begin{align}
 &[\vecb{a}']_1 = [\vecb{a}]_1 + \gamma[\vecb{u}_2]_1 \nonumber\\
@@ -36,11 +34,11 @@ Soundness follows from the fact that, whenever $\matr{U},\matr{W}$ come from the
 The right side of equation (\ref{eq:wi-verif}) has no component in $\vecb{u}_1\vecb{w}^\top_1$, while the left side component is $\beta x-y$. Hence, we conclude that $\beta x = y$.
 
 Computational zero-knowledge follows from the following argument.
-When $[\matr{U}]_1,[\matr{W}]_2$ are sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$ and $\vecb{w}_1  = \nu\vecb{w}_2$, for some random $\mu$ and $\nu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{c}]_2,[\vecb{d}]_2$ as 
+When $[\matr{U}]_1,[\matr{W}]_2$ are sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$ and $\vecb{w}_1  = \nu\vecb{w}_2$, for some random $\mu$ and $\nu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{c}]_2,[\vecb{d}]_1$ as 
 \begin{equation} \label{eq:sim-proofs}
-[\vecb{\psi}]_2 = r\mu[\vecb{c}]_2-\mu[\vecb{d}]_2-\delta[\vecb{w}_2]_2\text{ and }[\vecb{\omega}]_1 = \delta[\vecb{u}_2]_1\text{, for } \delta\gets\Z_q.
+[\vecb{\psi}]_2 = r[\vecb{c}]_2-\delta[\vecb{w}_2]_2\text{ and }[\vecb{\omega}]_1 = [\vecb{d}]_1\nu + \delta[\vecb{u}_2]_1\text{, for } \delta\gets\Z_q.
 \end{equation} 
-In particular, our simulator considers $[\vecb{c}]=s[\vecb{w}_2]_2,[\vecb{d}]_2=t[\vecb{w}_2]_2$ for $s,t\gets\Z_q$.
+In particular, our simulator sets $[\vecb{c}]_2=s[\vecb{w}_2]_2,[\vecb{d}]_1=t[\vecb{u}_2]_1$ for $s,t\gets\Z_q$.
 
 Note that both, the honest and the simulated proofs, follows exactly the same distribution. Indeed in both cases, $\vecb{a}$ and $\vecb{c},\vecb{d}$ are uniformly distributed in, respectively, $\Span(\vecb{u}_2)$ and $\Span(\vecb{w}_2)$, and the proofs are uniformly chosen among those that satisfy the respective verification equation.
 
