--- a/intro/high-level-sxdh.tex
+++ b/intro/high-level-sxdh.tex
@@ -31,24 +31,43 @@
 %$$
 
 
-\subsubsection{High Level Description.} Our scheme builds on top of the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the opening of a Groth-Sahai commitment is a Boneh-Boyen signature verification key $[vk]_2\in\GG_2$ and belongs to the ring of verification keys $R=\{[vk_1]_2,\ldots,[vk_n]_2\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
+\subsubsection{High Level Description.} Our scheme builds on top of the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the opening of a Groth-Sahai commitment is a Boneh-Boyen signature verification key $vk$ and belongs to the ring of verification keys $R=\{vk_1\ldots,vk_n\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of (vectors of) group elements (not only of verification keys).
 
 Our proof consists of two set-membership proofs in sets of size $n^{2/3}$ --- i.e.~each proof is of size $\Theta(\sqrt[3]{n})$ ---  plus $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments.
-We enlarge user's verification keys the by including $g$'s local key $([\vecb{a}]_1,[\vecb{b}]_2,[\vecb{c}]_2,[\vecb{d}]_2, \pi, \theta)\gets \KGen_{\mathsf{local}}(gk,k_0,\beta,sk)$, where $\beta=0$ and $sk$ is the Boneh-Boyen secret key. Recall that $[\vecb{a}]_1$, where $\vecb{a}\gets\mathcal{Q}_1^\beta$ (i.e.~a commitment to $\beta$), and $[\vecb{b}]_2=\Com_{[\matr{V}]_2}(\beta;\rho)$, $[\vecb{c}]_2=\Com_{[\vecb{v}]_2}(sk;\rho)$, $[\vecb{d}]_2 = \Com_{[\matr{V}]_2}(\beta sk;t)$, and $\pi$ and $\theta$ are the proofs from equations (\ref{eq:Qm-memb-proofs}) and (\ref{eq:wi-proofs}), respectively. Thereby, verification key of the $i$ th user is of the form $\vecb{vk}_i:=([vk_i]_2,[\vecb{a}_i]_1,[\vecb{b}_i]_2,[\vecb{c}_i]_2,[\vecb{d}_i]_2,\pi,\theta)$. Note that from commitments $[\vecb{a}_1]_1,\ldots,[\vecb{a}_n]_1$ one can derive a commtiment to $h(\matr{A})=h((\vecb{a}_1\cat\cdots\cat\vecb{a}_n))$ by somply computing $\sum_{i=0}^n [\vecb{a}_i]_1$. Similarly one can derive commitments to $g_{\matr{A}}(\vecb{sk}) = \sum_{i=0}^m\beta_i sk_i$ from $[\vecb{d}_1]_2,\ldots,[\vecb{d}_n]_2$ (recall the $sk$ is the discrete logarithm of $[vk]_2$, i.e.~$sk=vk$). Note also that $\pi_1,\ldots,\pi_n$ is a proof that $\matr{A}\in\mathcal{Q}_n$.
+Let $(x,vk)$ Boneh-Boyen secret/verification keys (note that $[x]_2=vk$).
+We enlarge user's verification keys the by including $g$'s local key $([\vecb{a}]_1,[\vecb{b}]_2, \pi)\gets \KGen_{\mathsf{local}}(gk,k_0,\beta)$, where $\beta=0$, plus $[\vecb{c}]_2,[\vecb{d}]_1$ and $\theta$ defined below. 
+%Recall that $[\vecb{a}]_1$, where $\vecb{a}\gets\mathcal{Q}_1^\beta$, is a commitment to $\beta$, as well as $[\vecb{b}]_2=\Com_{[\matr{V}]_2}(\beta;\rho)$.
+We compute $[\vecb{c}]_2=\Com_{[\matr{W}]_2}(x;s)$, $[\vecb{d}]_1 = x[\vecb{a}]_1+t[\vecb{u}_2]_2=\Com_{[\matr{U}]_1}(y)$, for $y:=\beta x$, and $\theta$ is a proof that $\beta x = y$ (see App. \ref{sec:GSproofs-g}). Thereby, verification key of the $i$ th user is of the form $\vecb{vk}_i:=([x_i]_2,[\vecb{a}_i]_1,[\vecb{b}_i]_2,[\vecb{c}_i]_2,[\vecb{d}_i]_1,\pi_i,\theta_i)$.
 
-In spite of all these differences with Chandran et al.'s proof, we also show that the opening of a Groth-Sahai commitment is a Boneh-Boyen verification key $[vk_i]_2$ and belongs to $\{[vk_1]_2,\ldots,[vk_n]_2\}$.
-
-Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we use the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier arrange some elements of the verification keys into $\vecb{x}_1,\ldots, \vecb{x}_{n^{2/3}}$, and $[\matr{A}_1]_1,\ldots, [\matr{A}_{n^{2/3}}]_1$ such that $\vecb{x}_i:= (sk_{i,1},\ldots,sk_{i,m})^\top\in\Z_q^m$,  and $[\matr{A}_i]_1=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]_1\in\GG^{2\times m}_1$. They also define the sets
+Note that from commitments $[\vecb{a}_1]_1,\ldots,[\vecb{a}_n]_1$ one can derive a commitment to $h(\matr{A})=h((\vecb{a}_1\cat\cdots\cat\vecb{a}_n))$ by simply computing $\sum_{i=0}^n [\vecb{a}_i]_1$. Similarly one can also compute $[\vecb{g}]_1 = \sum_{i=1}^m[\vecb{d}_i]_1$ such that
 \begin{align*}
-&H:=\{[\vecb{h}_1]_1,\ldots,\allowbreak [\vecb{h}_{n^{2/3}}]_1\},\text{ where }[\vecb{h}_i]_1 = \Com_{[\matr{U}]_1}(h(\matr{A}_i)) = \sum_{j=1}^m [\vecb{a}_{i,j}]_1 \\
-&G:=\{[\vecb{g}_1]_2,\ldots,[\vecb{g}_{n^{2/3}}]_2\},\text{ where } [\vecb{g}_i] = \Com_{[\matr{V}]_2}(g_{\matr{A}_i}(\vecb{x}_i)) = \sum_{j=1}^m [\vecb{d}_{i,j}]_2
+[\vecb{g}]_1[\vecb{w}_1^\top]_2 &= \sum_{i=1}^m [\vecb{d}_i]_1[\vecb{w}_1^\top]_2\\
+&= \sum_{i=1}^m [\vecb{a}_i][\vecb{c}_i^\top] - [\vecb{u}_2]_1\left(\sum_{i=1}^m[\vecb{\psi}_i]_2\right)^\top  -\left(\sum_{i=1}^m[\vecb{\omega}_1]_1\right)[\vecb{w}_2^\top]_2\\
+&= [\matr{A}]_1[\matr{C}^\top]_2 - [\vecb{u}_2]_1[\vecb{\psi}]_2 - [\vecb{\omega}]_1[\vecb{w}_2^\top]_2\\
+&= g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1),
+\end{align*}
+where the first step follows from the fact that $[\vecb{d}_i]_1$ satisfies equation (\ref{eq:ver-betax=y}) and $\matr{C}=(\vecb{c}_1\cat\cdots\cat\vecb{c}_m)$. %Note also that $\pi_1,\ldots,\pi_n$ is a proof that $\matr{A}\in\mathcal{Q}_n$.
+
+In spite of all these differences with Chandran et al.'s proof, we also show that the opening of a Groth-Sahai commitment is a Boneh-Boyen verification key $[x_i]_2$ and belongs to $\{[x_1]_2,\ldots,[x_n]_2\}$.
+
+Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we use the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$. The prover and the verifier arrange some elements of the verification keys into $[\matr{C}_1]_2,\ldots, [\matr{C}_{n^{2/3}}]_2$, and $[\matr{A}_1]_1,\ldots, [\matr{A}_{n^{2/3}}]_1$ such that $[\matr{C}_i]_2:= [\vecb{c}_{i,1}\cat\cdots\cat\vecb{c}_{i,m}]_2\in\GG_2^{2\times m}$,  and $[\matr{A}_i]_1=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]_1\in\GG^{2\times m}_1$. They also define the sets
+\begin{align*}
+&H:=\{[\vecb{h}_1]_1,\ldots,\allowbreak [\vecb{h}_{n^{2/3}}]_1\},\text{ where }[\vecb{h}_i]_1 = \sum_{j=1}^m [\vecb{a}_{i,j}]_1 \\
+&G:=\{[\vecb{g}_1]_1,\ldots,[\vecb{g}_{n^{2/3}}]_1\},\text{ where } [\vecb{g}_i]_1 =  \sum_{j=1}^m [\vecb{d}_{i,j}]_1
 \end{align*}
 
-The prover starts computing a Groth-Sahai commitment $[\vecb{c}_{\mu,\nu}]_2$ to its secret key $sk_\alpha=sk_{\mu,\nu}$, and a re-randomization of $[\vecb{h}_\mu]_1$, for some $1\leq \alpha \leq n$, and computes the first set-membership proof showing that $[\vecb{h}_\mu]_1\in H$.
-The prover computes a matrix $\matr{A}'$ such that the first column is a re-randomization of $[\vecb{a}_{\mu,\nu}]_1$, and the ones that follow are re-randomizations of the other columns of $[\matr{A}_\mu]_1$ (preserving the order). The prover also derives a proof that $\matr{A}'\in\mathcal{Q}_m$ re-randomizing proofs $\pi_{\mu,1},\ldots,\pi_{\mu,m}$ and shows that $h(\matr{A}_\mu)=h(\matr{A}')$ with a Groth-Sahai proof of the satisfiability of equation (\ref{eq:coll-h}).
+Assume that prover's secret key is $x_\alpha = x_{\mu,\nu}$.
+The prover starts computing $[\vecb{h}']_1$,
+%a Groth-Sahai commitment $[\vecb{c}_{\mu,\nu}]_2$ to its secret key $x_\alpha=x_{\mu,\nu}$, and 
+a re-randomization of $[\vecb{h}_\mu]_1$, and computes the first set-membership proof showing that $[\vecb{h}']_1\in H$.
+The prover computes a matrix $[\matr{A}']_1$ such that the first column is a re-randomization of $[\vecb{a}_{\mu,\nu}]_1$, and the columns that follow are re-randomizations of the other columns of $[\matr{A}_\mu]_1$ (preserving the order). The prover also derives a proof that $\matr{A}'\in\mathcal{Q}_m$ re-randomizing proofs $\pi_{\mu,1},\ldots,\pi_{\mu,m}$ and shows that $h(\matr{A}_\mu)=h(\matr{A}')$ with a Groth-Sahai proof of the satisfiability of equation equation (\ref{eq:coll-h}). Then, the prover computes $[\vecb{g}']_1$, a re-randomization of $[\vecb{g}_{\mu'}]$ where $\mu'=\mu$, and computes a  second set-membership proof showing that $[\vecb{g}']\in G$ and that $\mu'=\mu$.
 
-Next, the prover computes $[\matr{C}']_2,[\matr{D}']_2\in\GG_2^{2\times m}$, whose first columns are, respectively, re-randomizations of $[\vecb{c}_{\mu,\nu}],[\vecb{d}_{\mu,\nu}]$ and the following are re-ran\-do\-mi\-za\-tions of $[\vecb{c}_{\mu,1}]_1,\ldots,[\vecb{c}_{\mu,\nu-1}]_1,\allowbreak[\vecb{c}_{\mu,\nu+1}]_1,\ldots,[\vecb{c}_{\mu,m}]$ and $[\vecb{d}_{\mu,1}]_1,\ldots,[\vecb{d}_{\mu,\nu-1}]_1,\allowbreak[\vecb{d}_{\mu,\nu+1}]_1,\allowbreak\ldots,[\vecb{d}_{\mu,m}]$ (preserving the order). It re-randomizes proofs $\theta_{\mu,\nu},\theta_{\mu,1},\ldots,\allowbreak\theta_{\mu,\nu-1},\theta_{\mu,\nu+1},\ldots,\theta_{\mu,m}$, showing that $[\matr{C}']_2$ opens to some $\vecb{x}$ such that $[\vecb{d}_i']$ opens to $g_{\vecb{a}'_i}(x'_i)$ and this $\sum_{i=0}^m[\vecb{d}'_i]_2$ opens to $g_{\matr{A}'}(\vecb{x})$.
+Let $[\vecb{\psi}_\mu]_2 := \sum_{i=1}^m[\vecb{\psi}_{\mu,i}]_2$ and $[\vecb{\omega}_\mu]_1 := \sum_{i=1}^m[\vecb{\omega}_{\mu,i}]_1$. Note that $g_{\matr{A}_\mu}([\matr{C}_\mu]_2,\allowbreak[\vecb{\psi}_\mu]_2,[\vecb{\omega}_\mu]_1) = [\vecb{g}_\mu]_1[\vecb{w}_1^\top]_2$. Let $[\matr{C}']_2$ such that its first column is a re-ran\-do\-mi\-za\-tion of $[\vecb{c}_{\mu,\nu}]$ and the following columns are re-ran\-do\-mi\-za\-tions of $[\vecb{c}_{\mu,1}]_1,\ldots,\allowbreak[\vecb{c}_{\mu,\nu-1}]_1,\allowbreak[\vecb{c}_{\mu,\nu+1}]_1,\ldots,[\vecb{c}_{\mu,m}]$. Let $[\vecb{\psi}']_2,[\vecb{\omega}']_1$ as computed in equation (\ref{eq:g-rerand-proofs}).  It holds that $g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1) = [\vecb{g}']_1[\vecb{w}_1^\top]_2$.
 
-and also computes a re-randomization of $[\vecb{g}_{\mu'}]$, where $\mu'=\mu$. The second set-membership proof shows that $[\vecb{g}_{\mu'}]\in G$ and that $\mu'=\mu$. Finally, the prover shows that $g_{\matr{A}'}(\vecb{x}')=g_{\matr{A_{\mu'}}}(\vecb{x}_{\mu'})$ with a proof of (\ref{eq:coll-g}).
+%For $i\in[m]$, consider $[\vecb{c}'_i]_2,[\vecb{d}'_i]_1$ re-randomizations of, respectively, $[\vecb{c}_{\mu,i}]_1,[\vecb{d}_{\mu,i}]_2$ and $\theta'_i = ([\vecb{\psi}'_i]_2,[\vecb{\omega}']_1)$ the corresponding re-randomized proof. Clearly, $[\vecb{d}']$
+%Consider proofs $\theta_{\mu,\nu},\theta_{\mu,1},\ldots,\allowbreak\theta_{\mu,\nu-1},\theta_{\mu,\nu+1},\ldots,\theta_{\mu,m}$. Recall that $\theta_{i,j} = \allowbreak([\vecb{\psi}_{i,j}]_2,\allowbreak[\vecb{\omega}_{i,j}]_1)$ is such that $g_{\vecb{a}_{i,j}}([x_{i,j}]_2,[\vecb{\psi}_{i,j}]_2,[\vecb{\omega}_{i,j}]_1)=[\vecb{d}_{i,j}]_1[\vecb{w}_1^\top]_2$. 
 
-Since $\matr{A}'\equiv_{\matr{U}}\matr{A}_\mu$, Lemma \ref{lemma:hg} implies that $\vecb{x}'$ is a permutation of $\vecb{x}_\mu$. Therefore, $[\vecb{c}_{\mu,\nu}]_1$, opens to $x_{\mu,\nu}=sk_\alpha$ which is in the ring of secret keys.
+%Next, the prover computes $[\matr{C}']_2,[\matr{D}']_2\in\GG_2^{2\times m}$, whose first columns are, respectively, re-randomizations of $[\vecb{c}_{\mu,\nu}],[\vecb{d}_{\mu,\nu}]$ and the following columns are re-ran\-do\-mi\-za\-tions of $[\vecb{c}_{\mu,1}]_1,\ldots,[\vecb{c}_{\mu,\nu-1}]_1,\allowbreak[\vecb{c}_{\mu,\nu+1}]_1,\ldots,[\vecb{c}_{\mu,m}]$ and $[\vecb{d}_{\mu,1}]_1,\ldots,[\vecb{d}_{\mu,\nu-1}]_1,\allowbreak[\vecb{d}_{\mu,\nu+1}]_1,\allowbreak\ldots,\allowbreak[\vecb{d}_{\mu,m}]$ (preserving the order). It re-randomizes proofs $\theta_{\mu,\nu},\theta_{\mu,1},\ldots,\allowbreak\theta_{\mu,\nu-1},\theta_{\mu,\nu+1},\ldots,\theta_{\mu,m}$, showing that
+
+We will show that one can extract some $[\vecb{\varphi}]_2$ such that $g_{\matr{A}_\mu}([\matr{C}_\mu]_2,[\vecb{\varphi}]_2,[\vecb{\omega}_\mu]_1) =g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1)$. Furhtermore,
+since $\matr{A}'\sim_{\matr{U}}\matr{A}_\mu$, Lemma \ref{lemma:g-crp-sxdh} implies that $\matr{C}'\sim_\matr{W}\matr{C}$, which in turn implies that $\vecb{x}'$ is a permutation of $\vecb{x}_\mu$. Therefore, $[\vecb{c}_{\mu,\nu}]_1$, opens to $x_{\mu,\nu}=x_\alpha$ which is in the ring of secret keys.
